style: fix img on mobile.

--- a/src/index.css
+++ b/src/index.css
@@ -153,15 +153,13 @@
 /********************** Home ***********************/
 
 .presentation {
-  @apply p-0 flex gap-4 text-start
+  @apply p-0 flex flex-col gap-4 text-start
 }
 .links-social-medias {
   @apply flex gap-2
 }
 .profile-img {
-  @apply w-48 h-48 absolute -top-36 right-2 object-cover rounded-bl-[75%]
-/* SM */ sm:w-32 sm:h-32
-/* MD */ md:w-52 md:h-52
+  @apply w-48 h-48 absolute -top-36 -right-10 object-cover rounded-bl-[75%]
 }
 
 /*************************** About ****************************/
